Don't use this as parent as it crashes then on ubuntu jaunty. I verified this on kubuntu using QT 4.5. With debian lenny and qt 4.4.3 it does not crash.

Any explanations why this fix works are very appreciated ;)

BUG: 190326
CCBUG: 190483
CCMAIL: 357016@bugs.launchpad.net